2008-01-04  Muthiah Annamalai  <muthuspost@gmail.com>

	* general/sub2ind.m, general/ind2sub.m: Doc fix.

2008-01-04  Soren Hauberg   <hauberg@gmail.com>

	* set/create_set.m, set/union.m: Accept "rows" argument.

2008-01-02  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Correctly handle pbm terminal.

2007-12-28  John W. Eaton  <jwe@octave.org>

	* miscellaneous/edit.m: Use strcat instead of fullfile to add file
	extensions.

2007-12-28  David Bateman  <dbateman@free.fr>

	* ezcontourf.m, ezcontour.m, ezmeshc.m, ezmesh.m, ezplot3.m,
	__ezplot__.m, ezpolar.m, ezsurfc.m, ezsurf.m: New functions.
	* Makefile.in (SOURCES): Add to the sources.

2007-12-28  Kai Habel  <kai.habel@gmx.de>

	* plot/pcolor.m: Swap 1st and 2nd argument in call to meshgrid.
	Remove unnecessary call of size function.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-12-21  Soren Hauberg  <hauberg@gmail.com>

	* image/imshow.m: Accept empty value for display_range.

2007-12-20  Michael Goffioul <michael.goffioul@gmail.com>

	* pkg/pkg.m: Add .lib as architecture-dependent suffix.

2007-12-19  Soren Hauberg  <hauberg@gmail.com>

	* image/imshow.m: Store uint8 images as doubles.  Handle default
	display ranges correctly.

2007-12-19  Alexander Barth  <barth.alexander@gmail.com>
	    Peter A. Gustafson  <petegus@umich.edu>

	* scripts/contourc.m: Allow usage of irregular spaced x, y data.

2007-12-19  John W. Eaton  <jwe@octave.org>

	* miscellaneous/edit.m: New function.
	* miscellaneous/Makefile.in (SOURCES): Add it to the list.

2007-12-19  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/__bar__.m: Handle "basevalue" option.
	* plot/__bars__.m: New arg, base_value.

2007-12-17  David Bateman  <dbateman@free.fr>

	* plot/rose.m, plot/feather.m, plot/compass.m: New functions
	* plot/Makefiles (SOURCES): Add them to the sources
	* plot/polar.m: Set the x and y limits to the maximum polar
	radius. Set the axes to be square.