@@ -1,3 +1,8 @@
+2008-01-04  John W. Eaton  <jwe@octave.org>
+
+	* symtab.h (symbol_table:pop_scope): Avoid accessing beyond end of
+	scope_stack.
+
 2008-01-04  David Bateman  <dbateman@free.fr>
 
 	* ov-mapper.cc (SPARSE_MAPPER_LOOP_2): Use data method instead of
